# py-books-crud-api

./: README.md  pyproject.toml
src/books_crud_api/: bootstrap.py  main.py
src/books_crud_api/api/: book_router.py
src/books_crud_api/domain/entities/: book.py  book_errors.py
src/books_crud_api/domain/entities/common/: error.py  error_type.py  result.py
src/books_crud_api/domain/repositories/: abstract_book_repository.py
src/books_crud_api/infrastructure/: db.py
src/books_crud_api/infrastructure/models/: book.py
src/books_crud_api/infrastructure/repositories/: sqlalchemy_book_repository.py
src/books_crud_api/use_cases/add_book/: command.py  handler.py
src/books_crud_api/use_cases/delete_book/: handler.py
src/books_crud_api/use_cases/get_book/: handler.py  response.py
src/books_crud_api/use_cases/update_book/: command.py  handler.py
